# OcamlRouter

./: .gitignore  README.md  dune-project  openrouter.opam  todo.md
examples/: agent_decision.ml  dune  list_models.ml  pipeline_demo.ml  simple_chat.ml  streaming.ml  tool_use.ml  typed_tools_demo.ml
lib/: account.ml  agent.ml  agent.mli  api_account.ml  api_chat.ml  api_completions.ml  api_embeddings.ml  api_models.ml  api_providers.ml  auth.ml  chat.ml  client.ml  common.ml  completions.ml  config.ml  content.ml  dune  embeddings.ml  env_check.ml  errors.ml  message.ml  models.ml  openrouter.ml  pipeline.ml  provider.ml  providers.ml  reasoning.ml  retry.ml  sse.ml  streaming.ml  tool.ml  typed_tool.ml
samples/: README.md  v1_grammar.ml  v2_pipeline_combinators.ml  v3_state_machine.ml  v4_monadic.ml  v5_direct_recursion.ml
test/: dune  test_account.ml  test_agent_decision.ml  test_chat_features.ml  test_completions.ml  test_embeddings.ml  test_models.ml  test_openrouter.ml  test_pipeline.ml  test_providers.ml  test_typed_tool.ml
